<resources>
    <string name="auto_sync_string">Auto sync</string>
    <string name="app_name" translatable="false">News</string>
    <string name="full_app_name" translatable="false">Nextcloud News</string>
    <string name="account_type" translatable="false">de.luhmer.owncloudnewsreader</string>
    <string name="authority" translatable="false">de.luhmer.owncloudnewsreader</string>
    <string name="title_activity_sync_interval_selector">Sync Interval</string>
    <string name="empty_view_content">No items here</string>
    <string name="empty_view_content_action">Pull down to refresh</string>
    <string name="toast_GettingMoreItems">Download of more items started. Please wait …</string>
    <string name="no_wifi_available">No WiFi connected</string>
    <string name="do_you_want_to_download_without_wifi">Do you want to download the images without a Wi-Fi connection?</string>
    <string name="current_version">You\'re using Version %s</string>
    <string name="widget_header">Nextcloud News</string>
    <string name="message_bar_scroll_top">Reload and scroll to the top</string>
    <plurals name="message_bar_new_articles_available">
        <item quantity="one">%d new item available</item>
        <item quantity="other">%d new items available</item>
    </plurals>
    <string name="message_bar_reload">Reload</string>
    <string name="allUnreadFeeds">All unread items</string>
    <string name="starredFeeds">Starred items</string>
    <string name="downloadedPodcasts">Downloaded podcasts</string>
    <string name="title_activity_new_feed">Add new feed</string>
    <string name="menu_update">Refresh</string>
    <string name="menu_markAllAsRead">Mark all as read</string>
    <string name="menu_StartImageCaching">Download images</string>
    <string name="menu_downloadMoreItems">Download more items</string>
    <string name="img_view_thumbnail" translatable="false">Thumbnail</string>
    <string name="tv_showing_cached_version">Showing cached version</string>
    <string name="action_starred">Starred</string>
    <string name="action_read">Read</string>
    <string name="action_playPodacst">Play Podcast</string>
    <string name="action_removePodcast">Remove Podcast Media</string>
    <string name="action_openInBrowser">Open in Web browser</string>
    <string name="action_fullText">Load full text</string>
    <string name="full_text_failed">Could not load full text for this article</string>
    <string name="full_text_no_link">This article has no link to load full text from</string>
    <string name="action_Share">Share</string>
    <string name="action_login">Server Settings</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync_settings">Sync Settings</string>
    <string name="action_add_new_feed">Add new feed</string>
    <string name="action_add_new_folder">Add new folder</string>
    <string name="action_textToSpeech">Read out</string>
    <string name="action_search">Search</string>
    <string name="action_download_articles_offline">Download articles offline</string>
    <string name="news_list_drawer_text" translatable="false">Feed-list</string>
    <string name="notification_download_articles_offline">Downloading articles for offline usage</string>
    <string name="notification_download_images_offline">Downloading images for offline usage</string>
    <plurals name="notification_new_items_ticker">
        <item quantity="one">You have %d new unread item</item>
        <item quantity="other">You have %d new unread items</item>
    </plurals>
    <plurals name="notification_new_items_text">
        <item quantity="one">%d new unread item available</item>
        <item quantity="other">%d new unread items available</item>
    </plurals>
    <string name="hint_feed_url">Feed URL</string>
    <string name="action_add_feed">Add feed</string>
    <string name="import_opml">Import OPML</string>
    <string name="export_opml">Export OPML</string>
    <string name="action_img_download">Download Image</string>
    <string name="action_img_sharelink">Share Image Link</string>
    <string name="action_img_open">Open Image in Browser</string>
    <string name="action_img_copylink">Copy Image Link</string>
    <string name="action_link_share">Share Link</string>
    <string name="action_link_open">Open Link in Browser</string>
    <string name="action_link_copy">Copy Link</string>
    <string name="toast_img_download_wait">Downloading. Please wait …</string>
    <string name="toast_img_saved">Image saved</string>
    <string name="toast_img_notwriteable">Failed to write Image.</string>
    <string name="toast_copied_to_clipboard">Copied to clipboard</string>
    <string name="error_download_failed">Download failed</string>
    <string name="intent_title_share">Share via</string>
    <string name="action_feed_remove">Remove Feed</string>
    <string name="action_feed_rename">Rename Feed</string>
    <string name="action_feed_move">Move Feed</string>
    <string name="action_feed_notification_settings">Notification settings</string>
    <string name="action_feed_open_in">Open-in settings</string>
    <string name="action_feed_open_in_general_setting">Use general setting</string>
    <string name="action_feed_open_in_detailed_view">Detailed view</string>
    <string name="feed_remove_button">Remove</string>
    <string name="feed_rename_button">Rename</string>
    <string name="confirm_feed_remove">Do you really want to remove this Feed? This cannot be undone!</string>
    <string name="feed_move_list_description">Select folder to move feed in</string>
    <string name="move_feed_root_folder">Root folder</string>
    <string name="action_folder_remove">Remove folder</string>
    <string name="action_folder_rename">Rename folder</string>
    <string name="folder_remove_button">Remove</string>
    <string name="folder_rename_button">Rename</string>
    <string name="confirm_folder_remove">Do you really want to remove this folder? This cannot be undone!</string>
    <string name="notification_feed_unique">Receive unique notifications for this feed</string>
    <string name="notification_feed_default">All feeds with the default settings will appear in one notification</string>
    <string name="notification_feed_none">No notifications at all</string>
    <string name="folder_add_button">Add</string>
    <string name="hint_folder_name">Folder name</string>
    <string name="folder_already_exists">The folder already exists</string>
    <string name="login_manual">Manual login</string>
    <string name="login_sso">Login using Nextcloud Files App</string>
    <string name="pref_title_username">Username</string>
    <string name="pref_title_password">Password</string>
    <string name="pref_title_owncloudRootPath">Nextcloud root address</string>
    <string name="pref_default_owncloudRootPath">https://1.2.3.4/nextcloud</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_progress_signing_in">Signing in …</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_url">Incorrect URL</string>
    <plurals name="marked_as_read_message">
        <item quantity="one">Marked %d item as read</item>
        <item quantity="other">Marked %d items as read</item>
    </plurals>
    <plurals name="toast_downloaded_x_items">
        <item quantity="one">Downloaded %d old item</item>
        <item quantity="other">Downloaded %d old items</item>
    </plurals>
    <string name="toast_no_more_downloads_available">No further items available</string>
    <plurals name="fetched_items_so_far">
        <item quantity="one">Fetched %d item so far …</item>
        <item quantity="other">Fetched %d items so far …</item>
    </plurals>
    <string name="title_activity_settings">Settings</string>
    <string name="cache_is_cleared">Cache is cleared!</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_general_sort_order">Sort Order</string>
    <string name="pref_general_sort_order_new_old">New → Old</string>
    <string name="pref_general_sort_order_old_new">Old → New</string>
    <string-array name="pref_general_swipe_action" translatable="false">
        <item>@string/action_openInBrowser</item>
        <item>@string/action_starred</item>
        <item>@string/action_read</item>
        <item>@string/action_Share</item>
    </string-array>
    <string-array name="pref_general_swipe_action_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pref_rename_action_swipe_right">Action when swiping right</string>
    <string name="pref_rename_action_swipe_left">Action when swiping left</string>
    <string-array name="pref_general_sort_order" translatable="false">
        <item>@string/pref_general_sort_order_new_old</item>
        <item>@string/pref_general_sort_order_old_new</item>
    </string-array>
    <string-array name="pref_general_sort_order_values_not_translated" translatable="false">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string name="pref_title_general_search_in">Search In</string>
    <string name="pref_title_tts_settings">Speech engine and voice</string>
    <string name="pref_summary_tts_settings">Open the system settings to choose the engine and voice used for reading articles aloud</string>
    <string name="pref_general_search_in_title">Title</string>
    <string name="pref_general_search_in_body">Body</string>
    <string name="pref_general_search_in_both">Both</string>
    <string-array name="pref_general_search_in" translatable="false">
        <item>@string/pref_general_search_in_both</item>
        <item>@string/pref_general_search_in_title</item>
        <item>@string/pref_general_search_in_body</item>
    </string-array>
    <string name="pref_title_AutoSyncOnStart">Sync on startup</string>
    <string name="pref_title_ShowOnlyUnread">Show only unread articles</string>
    <string name="pref_title_DisableHostnameVerification">Disable Hostname Verification</string>
    <string name="pref_title_NavigateWithVolumeButtons">Navigate with volume buttons</string>
    <string name="pref_title_MarkAsReadWhileScrolling">Mark as read while scrolling</string>
    <string name="pref_title_OpenInBrowserDirectly">Skip detailed view and open article in the browser</string>
    <string name="pref_header_about">About</string>
    <string name="pref_license">License</string>
    <string name="pref_license_summary">GNU Affero General Public License (AGPL) version 3</string>
    <string name="pref_contribute">Contribute!</string>
    <string name="pref_contribute_summary">Get the source code</string>
    <string name="pref_version">Nextcloud News Android app</string>
    <string name="pref_header_display">Display</string>
    <string name="pref_title_app_theme">Theme</string>
    <string name="pref_title_feed_list_layout">Feed list layout</string>
    <string-array name="pref_display_browser" translatable="false">
        <item>@string/pref_display_browser_cct</item>
        <item>@string/pref_display_browser_external</item>
        <item>@string/pref_display_browser_built_in</item>
    </string-array>
    <string name="pref_display_news_detail_actionbar_icons_title">Action icons (Detail View)</string>
    <string name="pref_oled_mode">Black background</string>
    <string name="pref_oled_mode_summary">For dark theme on OLED screens</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_clearCache">Clear cache</string>
    <string name="pref_title_CacheImagesOffline">Cache images offline</string>
    <string name="pref_title_Max_Cache_Size">Max Cache Size</string>
</resources>