<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
     -->
    
    <item
        android:id="@+id/action_starred"
        app:showAsAction="always"
        android:icon="@drawable/checkbox_background_holo_dark"
        android:title="@string/action_starred"/>
    <!-- android:icon="@drawable/btn_rating_star_off_normal_holo_light" -->
    
    <item
        android:id="@+id/action_read"
        app:showAsAction="always"
        android:checkable="true"
        android:title="@string/action_read" />
    
    <item
        android:id="@+id/action_openInBrowser"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/action_openInBrowser"/>

    <item
        android:id="@+id/action_playPodcast"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/action_playPodacst"/>

    <!-- 
    <item
        android:id="@+id/action_sendSourceCode"
        android:showAsAction="never"        
        android:title="@string/action_sendSourceCode"/>
	-->
    
    <item
        android:id="@+id/action_ShareItem"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/action_Share" />

</menu>