<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".LoginActivity"
	android:id="@+id/login_form"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

	    <EditText
	        android:id="@+id/username"
	        android:inputType="textEmailAddress"
	        style="@style/LoginDialogEditTextStyle"
	        android:hint="@string/pref_title_username" />

	    <EditText
	        android:id="@+id/password"
	        android:inputType="textPassword"
	        style="@style/LoginDialogEditTextStyle"
	        android:fontFamily="sans-serif"
	        android:hint="@string/pref_title_password" />

	    <EditText
	        android:id="@+id/edt_owncloudRootPath"
	        android:fontFamily="sans-serif"
	        android:hint="@string/pref_default_owncloudRootPath"
	        android:inputType="textUri"
	        android:maxLines="1"
	        android:selectAllOnFocus="true"
	        android:singleLine="true"
	        android:title="@string/pref_default_owncloudRootPath"
	        style="@style/LoginDialogEditTextStyle" />

	    <CheckBox
	        android:id="@+id/cb_AllowAllSSLCertificates"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/pref_title_DisableHostnameVerification" />

        <Button
            android:id="@+id/btn_importAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Import Account from other ownCloud App"/>

	    <View
	        android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="#383E44"
			android:layout_marginTop="5dp"
			android:layout_marginLeft="8dp"
			android:layout_marginRight="8dp" />

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

           <Button
               android:id="@+id/btn_cancel"
               android:layout_width="0dip"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:background="@android:color/transparent"
               android:text="@android:string/cancel" />

           <View
               android:layout_width="1dp"
               android:layout_height="match_parent"
               android:background="#383E44"
               android:layout_marginTop="8dp"
               android:layout_marginBottom="8dp" />

           <Button
               android:id="@+id/btn_signin"
               android:layout_width="0dip"
               android:layout_height="match_parent"
               android:layout_weight="1"
               android:background="@android:color/transparent"
               android:text="@string/action_sign_in_short" />
		</LinearLayout>

	</LinearLayout>
</ScrollView>