<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="de.luhmer.owncloudnewsreader.NewFeedActivity"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/new_feed_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

        <ScrollView
            android:id="@+id/feed_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:id="@+id/new_feed_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_feed_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:hint="@string/hint_feed_url"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="viewStart"/>

                <Spinner
                    android:id="@+id/sp_folder"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="start"
                    android:textAlignment="viewStart"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_addFeed"
                    style="@style/Widget.MaterialComponents.Button"
                    android:textColor="@android:color/black"
                    android:backgroundTint="#eeeeee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_add_feed"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button"
                        android:id="@+id/btn_import_opml"
                        android:textColor="@android:color/black"
                        android:backgroundTint="#eeeeee"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/import_opml"
                        android:textStyle="bold" />

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button"
                        android:textColor="@android:color/black"
                        android:backgroundTint="#eeeeee"
                        android:id="@+id/btn_export_opml"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="8dp"
                        android:text="@string/export_opml"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar_layout" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>